# transaction-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
app/: dependencies.py  main.py  worker.py
app/api/: routes.py
app/api/endpoints/: account.py  health.py  transaction.py
app/core/: config.py  database.py  exceptions.py  logger.py
app/integrations/: bank_partner.py
app/messaging/: publisher.py
app/models/: transaction.py
app/repositories/: transaction_repository.py
app/schemas/: transaction.py
app/services/: account_services.py  transaction_service.py
tests/: conftest.py  test_transaction_service.py
tests/integration/: test_account_api.py  test_bank_partner_integration.py  test_transaction_api.py
tests/unit/: test_account_service.py  test_transaction_service.py
